PE-40: Workflows located on the server are now downloaded locally
IN PROGRESS - issue PE-40: Call Local Workflow node doesn't work on server any more 
https://knime-com.atlassian.net/browse/PE-40